<resources>
    <string name="app_name">MaktabHW18-1</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="email">email</string>
    <string name="registerbtn">Register</string>
    <string name="todo">todo</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="done">done</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="add_your_contact_information">Add Your task information</string>
    <string name="camera">Camera</string>
    <string name="do_you_want_to_delete">Do you want to delete?</string>
    <string name="ok">OK</string>
    <string name="date2">Date</string>
    <string name="share">share</string>
    <string name="delete">Delete</string>
</resources>